# entity_canvas

./: .gitignore  00_milestone_summary.md  FEATURES.md  README.md  docker-compose.yml  entity_canvas.code-workspace
.antigravity/: agent_instructions.md
.antigravity/instructions/: 01_agent_instructions.md  02_coding_standards.md  03_workflow_recipes.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml
backend/: .dockerignore  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml  verify_db.py
backend/api/: api.py
backend/api/endpoints/: connections.py  queries.py  schema.py
backend/core/: exceptions.py
backend/models/: query.py  schema.py
backend/scripts/: check_db.py  setup_test_db.py  verify_schema.py
backend/services/: schema_discovery.py  sql_builder.py
backend/tests/: conftest.py  test_queries.py
db/: init-db.sh  local_pagila.sql
docs/: future_roadmap.md
docs/design_docs/: 00_milestone_summary.md  01_project_scaffolding.md  02_query_engine.md  03_interactive_workspace.md  04_deployment_and_cicd.md  04_devops_cicd.md  05_multi_database_support.md  05_pagila_integration.md  06_backend_refactoring.md  INDEX.md
docs/knowledge_base/: 01_tech_hurdles.md  02_frontend_learnings.md  03_devops_learnings.md  04_deployment_hardener.md  05_docker_dev_patterns.md  06_postgres17_and_docker_networking.md
frontend/: .dockerignore  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
frontend/app/components/: AppNavbar.vue  AppWorkspaceNavbar.vue  DatabaseSwitcher.vue
(+19 files in other folders)
