[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "sqlglot>=30.4.3",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.0.1",
]
[project.scripts]
dev = "main:start"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
